fix transactions endpoint
